<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragments.SelectionListFragment" >

    <LinearLayout
        android:id="@+id/random_product_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:layout_width="20dp"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="#FF5722"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="Document Solution - Lase AIO"
                android:textSize="19sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="12dp"
                android:background="#FF5722"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/dividerVertical"/>

        <TextView
            android:id="@+id/pan_printer_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:textColor="@color/black"
            android:textSize="23sp"
            android:text="@string/pan_printer_1"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/dividerVertical"/>

        <TextView
            android:id="@+id/pan_printer_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:textColor="@color/black"
            android:textSize="23sp"
            android:text="@string/pan_printer_2"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/dividerVertical"/>

        <TextView
            android:id="@+id/pan_printer_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:textColor="@color/black"
            android:textSize="23sp"
            android:text="@string/pan_printer_3"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/dividerVertical"/>

        <TextView
            android:id="@+id/pan_printer_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:textColor="@color/black"
            android:textSize="23sp"
            android:text="@string/pan_printer_4"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:layout_width="20dp"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="#FF5722"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="Projector"
                android:textSize="19sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="12dp"
                android:background="#FF5722"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/dividerVertical"/>

        <TextView
            android:id="@+id/pan_projector_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:textColor="@color/black"
            android:textSize="23sp"
            android:text="@string/pan_projector_1"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/dividerVertical"/>

        <TextView
            android:id="@+id/pan_projector_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:textColor="@color/black"
            android:textSize="23sp"
            android:text="@string/pan_projector_2"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/dividerVertical"/>

        <TextView
            android:id="@+id/pan_projector_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:textColor="@color/black"
            android:textSize="23sp"
            android:text="@string/pan_projector_3"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:layout_width="20dp"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="#FF5722"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="Home Communication - Landline Phone"
                android:textSize="19sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="12dp"
                android:background="#FF5722"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/dividerVertical"/>

        <TextView
            android:id="@+id/pan_phone_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:textColor="@color/black"
            android:textSize="23sp"
            android:text="@string/pan_phone_1"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/dividerVertical"/>

        <TextView
            android:id="@+id/pan_phone_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:textColor="@color/black"
            android:textSize="23sp"
            android:text="@string/pan_phone_2"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/dividerVertical"/>

        <TextView
            android:id="@+id/pan_phone_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:textColor="@color/black"
            android:textSize="23sp"
            android:text="@string/pan_phone_3"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/dividerVertical"/>

        <TextView
            android:id="@+id/pan_phone_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:textColor="@color/black"
            android:textSize="23sp"
            android:text="@string/pan_phone_4"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/dividerVertical"/>

        <TextView
            android:id="@+id/pan_phone_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:textColor="@color/black"
            android:textSize="23sp"
            android:text="@string/pan_phone_5"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="?android:attr/dividerVertical"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:background="#808080"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="The End of Product List Selection"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="#808080"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:background="#808080"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>

